--- a/Readme
+++ b/Readme
@@ -3,6 +3,7 @@
 Catatan pembuatan custom theme wordpress.
 
 ## List Fungsi
+
 List fungsi yang biasa sering digunakan.
 
 ```php
@@ -11,4 +12,9 @@ Fungsi untuk menghasilkan uri file static.
 $file: String - File path
 */
 get_theme_file_uri( string $file = '' )
+
+/*
+Fungsi untuk menghasilkan lokasi template. Fungsi cara cepat untuk replace path file static di layout. Contoh penggunaan: src="<?= get_template_directory_uri(); ?>/themes/resume/assets/img/testimonials/testimonials-1.jpg"
+*/
+get_template_directory_uri()
 ```
